Fixed to allow collection without store